fix distorted image sizes on mobile

--- a/app/assets/stylesheets/mixins/media.sass
+++ b/app/assets/stylesheets/mixins/media.sass
@@ -14,3 +14,7 @@
     max-width: 100%
     min-height: 20px
     transition: opacity 0.25s
+
+  +lte_ipad
+    img[width]
+      height: auto
